support oldest Java version, minor typo fix